Comandos, Comentários e Observações

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,5 @@
+// Sobrescrevendo valores do 'body-color', 
+// 'body-bg' e 'font-size-base'
 $body-color: #43616f;
 $body-bg: #fff;
 $font-size-base: 0.925rem;
